[package]
name = "code-exec-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.15.0", features = ["server", "macros", "transport-streamable-http-server"] }
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }
tokio-util = { version = "0.7" }
axum = { version = "0.8", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
anyhow = "1.0"
